# Time-Series-Library

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
data_provider/: __init__.py  data_factory.py  data_loader.py
exp/: exp_anomaly.py  exp_base.py  exp_forecasting.py
layers/: Conv_Blocks.py  Decomposition.py  Embed.py  Mixing.py  ModernTCNBlock.py  PatchEmbedding.py  RevIN.py
models/: ModernTCN.py  PatchTST.py  TimeMixer.py  TimesNet.py
notebooks/: 01_experiments.ipynb  anomaly_detection_colab.ipynb  forecasting_colab.ipynb
scripts/: download_anomaly_data.py  download_data.py  run_benchmark.sh
scripts/ModernTCN/: anomaly_SMD.sh  benchmark_forecasting.sh  debug_ETTh1.sh  debug_anomaly_SMD.sh  forecast_ETTh1.sh
scripts/PatchTST/: anomaly_SMD.sh  benchmark_forecasting.sh  debug_ETTh1.sh  debug_anomaly_SMD.sh  forecast_ETTh1.sh
scripts/TimeMixer/: anomaly_SMD.sh  benchmark_forecasting.sh  debug_ETTh1.sh  debug_anomaly_SMD.sh  forecast_ETTh1.sh
scripts/TimesNet/: anomaly_SMD.sh  benchmark_forecasting.sh  debug_ETTh1.sh  debug_anomaly_SMD.sh  forecast_ETTh1.sh
scripts/checks/: check_anomaly.py  check_data.py  check_env.py  check_layers.py  check_modernTCN.py  check_patchTST.py  check_timemixer.py  check_timesnet.py
utils/: __init__.py  anomaly_metrics.py  metrics.py  timefeatures.py  tools.py
