[project]
name = "time-series-library"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "einops",
    "reformer-pytorch",
    "pyyaml",
    "omegaconf",
    "tensorboard",
    "matplotlib",
    "seaborn",
    "tqdm",
    "loguru",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
    "pytest",
    "ruff"
]

# Torch's index
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# Torch's packages' index
[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
