[project]
name = "time-series-library"
version = "0.1.0"
description = "TimesNet and TimeMixer implementations for forecasting and anomaly detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "einops",
    "reformer-pytorch",
    "pyyaml",
    "omegaconf",
    "tensorboard",
    "matplotlib",
    "seaborn",
    "tqdm",
    "loguru",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
    "pytest",
    "ruff"
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["utils*", "data_provider*", "exp*", "layers*", "models*", "scripts*"]

[project.scripts]
download-data   = "scripts.download_data:main"
check-env       = "scripts.checks.check_env:main"
check-data      = "scripts.checks.check_data:main"
check-layers    = "scripts.checks.check_layers:main"
check-timesnet  = "scripts.checks.check_timesnet:main"
check-timemixer  = "scripts.checks.check_timemixer:main"
check-patchtst   = "scripts.checks.check_patchTST:main"
check-moderntcn  = "scripts.checks.check_modernTCN:main"
check-anomaly    = "scripts.checks.check_anomaly:main"

# Torch's index
[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# Torch's packages' index
[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
